# sql-cli

./: .gitignore  .wslconfig  BusinessCrimeBoroughLevel.csv  CHANGELOG.md  DEMO_QUERIES.md  MULTI_SOURCE_PROXY.md  README.md  build.sh  column-search.cast  demo.sh  monitor_disk_usage.ps1  move_wsl_to_d.ps1  optimize_windows_disk.ps1  optimize_windows_disk_safe.ps1  query_results_20250809_184123.csv  run.sh  save-screenshot.sh  setup-hooks.sh  test.sh  test_buffer_switching.sh  test_enhanced_tui.sh  test_history.sh  test_search_20k.sh  test_search_debug.sh  test_search_interactive.exp  trades_10k.csv
proxy-server/: Cargo.toml
sql-cli/: .gitignore  .lldbinit  .wslconfig  ACTION_SYSTEM_PROGRESS.md  ADD_TO_GITHUB_WORKFLOWS.md  BRANCH_STATUS.md  BUFFER_ONLY_DESIGN.md  CLAUDE.md  COLUMN_OPERATIONS_TODO.md  COLUMN_SEARCH_COMPLETE_FIX.md  COLUMN_SEARCH_FIX.md  CONFIG.md  Cargo.toml  DATAVIEW_COMPLETE.md  DEBOUNCED_INPUT_INTEGRATION.md  DEBUGGING_TUI.md  FEATURES.md  FINAL_COLUMN_SEARCH_FIX.md  FUTURE_IMPROVEMENTS.md  FUZZY_FILTER_CLEAN.md  HISTORY_NAVIGATION_PLAN.md  IMPROVEMENTS.md  ISSUES.md  KEY_MIGRATION_PROGRESS.md  MERGE_SUMMARY.md  MIGRATION_AUDIT.md  PHASE2_MIGRATION_PLAN.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTOR_NOTES.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.16.0.md  SEARCH_COORDINATE_FIX.md  SHADOW_STATE_CURRENT.md  STATE_DUPLICATION_ANALYSIS.md  TAB_SWITCHING.md  TUI_FIX_LIST.md  TUI_MIGRATION_STRATEGY.md  TUI_QUICK_FIXES.md  (+249 more)
sql-cli/.claude/: README_AGENTS.md
sql-cli/.run/: Debug TUI - External Terminal.run.xml  Debug TUI - Remote Attach.run.xml
sql-cli/benches/: where_evaluation.rs
sql-cli/data/: instruments.csv  instruments.json  trades.json  vwap_example_fills.json  vwap_example_orders.json
sql-cli/demos/: README-examples.md  cache-feature.tape  column-navigation.tape  column-search-stats.tape  fuzzy-filter.tape  help-page.tape  history-search.tape  install-vhs.sh  multiline-editing.tape  overview-optimized.tape  overview.tape  run-demos.sh  select-star-expansion.tape  sql-autocomplete.tape  sql-editing.tape  sql-queries.tape  sql-with-keys.tape  statistics.tape  test-help.tape  vim-navigation.tape
sql-cli/docs/: ADVANCED_PARSING_OPTIMIZATIONS.md  ARCHITECTURE_PROBLEM.md  AST_FLOW.md  BRANCH_STATUS.md  BRANCH_STRATEGY.md  BUFFER_STATE_REFACTOR_PLAN.md  BUFFER_STATE_SNAPSHOT_DESIGN.md  COLUMN_HIDING.md  COLUMN_OPERATIONS_ANALYSIS.md  COLUMN_OPERATIONS_REFACTORING_COMPLETE.md  CONFIG.md  CRITICAL_ISSUES.md  DATATABLE_DATAVIEW_ARCHITECTURE.md  DATATABLE_IMPLEMENTATION_STRATEGY.md  DATA_VIEW_VIEWPORT_SYNC.md  DataView.md  EDITING_TEST_SUMMARY.md  EXCEL_INTEGRATION_ROADMAP.md  FutureEnhancements.md  IMMEDIATE_NEXT_STEPS.md  INPUT_BEHAVIOR_ANALYSIS.md  LEGACY_FIELDS_ANALYSIS.md  MASTER_REFACTORING_ROADMAP.md  MEMORY_INVESTIGATION.md  MIGRATION_PLAN.md  MODULE_STRUCTURE.md  N_KEY_FIX_COMPLETE.md  OUT_OF_ORDER_COLUMN_NAVIGATION_INVESTIGATION.md  PHASE1_IMPLEMENTATION.md  README.md  REDUX_STATE_COORDINATOR_DESIGN.md  REDUX_STATE_IMPLEMENTATION_COMPLETE.md  REGISTER_SYSTEM_DESIGN.md  RELEASE.md  SEARCH_MANAGER_ARCHITECTURE.md  SHADOW_STATE_EXPANSION_PLAN.md  SHADOW_STATE_OBSERVATIONS.md  SQL_MATH_EXTENSIONS.md  STATE_LOGGING_DESIGN.md  STATE_MANAGEMENT_REFACTOR.md  (+48 more)
sql-cli/examples/: test_dataview_standalone.rs
sql-cli/integration_tests/: README.md  test_action_system.rs  test_all_fixes.sh  test_cache.sh  test_case_insensitive_query.rs  test_column_alignment.exp  test_column_navigation.rs  test_column_pinning.rs  test_column_search.sh  test_column_search_fix.sh  test_column_search_navigation.sh  test_crosshair_fix.sh  test_csv_issues.rs  test_datetime.sh  test_expansion.csv  test_filter_migration.csv  test_filter_verification.sh  test_filterstate_migration.sh  test_filterstate_simple.sh  test_fuzzy_clear.sh  test_g_command.sh  test_g_crosshair.csv  test_g_crosshair.sh  test_g_final.sh  test_hide_alignment.exp  test_hide_column_fix.sh  test_hide_visual.sh  test_history_unit.rs  test_input.txt  test_logical_nav.csv  test_memory.rs  test_multiline.sh  test_n_key_adapter.sh  test_n_key_toggle.sh  test_n_navigation.sh  test_nav_actions.csv  test_nav_verify.csv  test_navigation.sh  test_navigation_render.sh  test_not_in_parsing.rs  (+28 more)
sql-cli/proxy-example/: AdvancedQTranslator.cs  Program.cs  README.md  SqlCliProxyController.cs  SqlToQDemo.csproj  SqlToQTranslator.cs  TESTING_GUIDE.md  TestQTranslation.cs  build_and_run.sh  create_sample_trades.q  load_trades.q
sql-cli/src/: action_handler.rs  api_client.rs  app_state_container.rs  buffer.rs  buffer_handler.rs  cache.rs  cell_renderer.rs  column_manager.rs  completer.rs  completion_manager.rs  config.rs  csv_datasource.rs  csv_fixes.rs  cursor_aware_parser.rs  cursor_manager.rs  cursor_operations.rs  data_analyzer.rs  data_exporter.rs  data_manager.rs  datasource_adapter.rs  datatable.rs  datatable_buffer.rs  datatable_converter.rs  datatable_loaders.rs  datatable_view.rs  debouncer.rs  debug_helpers.rs  debug_info.rs  debug_service.rs  dynamic_schema.rs  editor_widget.rs  enhanced_tui.rs  enhanced_tui.rs.backup  global_state.rs  help_text.rs  help_widget.rs  history.rs  history_manager.rs  history_protection.rs  history_widget.rs  (+39 more)
sql-cli/tests/: README_TRADES_TESTS.md  data_view_tests.rs  data_view_trades_test.rs  datatable_conversion_test.rs  datatable_integration_test.rs  datetime_completion.rs  history_protection_integration.rs  method_evaluation_test.rs  parser_regression_tests.rs  real_query_capture.rs  test_between_parsing.rs  test_buffer.rs  test_buffer_state_refactor.rs  test_cache_query.rs  test_case_insensitive.rs  test_column_search.rs  test_column_sizing.rs  test_complex_date_queries.rs  test_complex_queries.rs  test_comprehensive_operators.rs  test_datatable_provider.rs  test_dataview_isolated.rs  test_filter_fix.rs  test_indexof_space.rs  test_input_navigation.rs  test_interned_string_sort.rs  test_json_loading.rs  test_mixed_numeric_sorting.rs  test_multi_buffer.rs  test_multi_column_interned_sort.rs  test_multi_column_order_by.rs  test_n_key_state.rs  test_numeric_columns.rs  (+15 more)
(+297 files in other folders)
