[package]
name = "sql-cli"
version = "1.10.2"
edition = "2021"

[lib]
name = "sql_cli"
path = "src/lib.rs"

[[bin]]
name = "sql-cli"
path = "src/main.rs"

[[bin]]
name = "test-csv"
path = "test_csv.rs"

[[bin]]
name = "test-csv-queries"
path = "test_csv_queries.rs"

[[bin]]
name = "test-linq-methods"
path = "test_linq_methods.rs"

[[bin]]
name = "test-cache"
path = "test_cache.rs"

[[bin]]
name = "test-json-cli"
path = "test_json_cli.rs"

[[bin]]
name = "test-order-by"
path = "test_order_by.rs"

[[bin]]
name = "test-order-by-csv"
path = "test_order_by_csv.rs"

[[bin]]
name = "test-order-by-completion"
path = "test_order_by_completion.rs"

[[bin]]
name = "test-csv-issues"
path = "test_csv_issues.rs"

[[bin]]
name = "test-where-order-by-issue"
path = "test_where_order_by_issue.rs"

[[bin]]
name = "test-not-contains"
path = "test_not_contains.rs"

[[bin]]
name = "test-null-handling"
path = "test_null_handling.rs"

[[bin]]
name = "test-large-dataset-perf"
path = "test_large_dataset_perf.rs"

[[bin]]
name = "test-case-insensitive-csv"
path = "test_case_insensitive_csv.rs"

[[bin]]
name = "test-quoted-method-completion"
path = "test_quoted_method_completion.rs"

[[bin]]
name = "test-quoted-debug"
path = "test_quoted_debug.rs"

[[bin]]
name = "test-paren-method-completion"
path = "test_paren_method_completion.rs"

[[bin]]
name = "test-column-pinning"
path = "test_column_pinning.rs"

[[bin]]
name = "test-trades-equality"
path = "test_trades_equality.rs"



[dependencies]
reedline = "0.30"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
comfy-table = "7.0"
csv = "1.3"
ratatui = "0.29"
tui-input = { version = "0.11", features = ["crossterm"] }
anyhow = "1.0"
regex = "1.0"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
syntect = "5.0"
arboard = "3.2"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }

[dev-dependencies]
tempfile = "3.8"

[profile.dev]
opt-level = 0       # No optimization for debugging
debug = true        # Include debug symbols
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel codegen for better optimization
strip = true        # Strip symbols